# bugoo

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default-settings.json
src-tauri/resources/stardict-ecdict/: README.md
src-tauri/resources/translation/: baidu-languages.json  custom-languages.json  deepl-languages.json  engine-endpoints.json  google-languages.json  libretranslate-languages.json  local-engine.json  microsoft-languages.json  tencent-languages.json  youdao-languages.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/outbound/: mod.rs  sqlite.rs  tts.rs
src-tauri/src/adapters/outbound/config/: engine_endpoints.rs  mod.rs  (+1 more)
src-tauri/src/commands/: mod.rs  review.rs  settings.rs  tags.rs  translate.rs  translation_languages.rs  tts.rs  window.rs  word_details.rs  words.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  tags.rs
src-tauri/src/domain/models/: mod.rs  tag.rs  word.rs
src-tauri/src/domain/services/: mod.rs  speech_service.rs  translation_service.rs  word_service.rs
src-tauri/src/ports/inbound/: mod.rs
src-tauri/src/ports/outbound/: dictionary.rs  language_detection.rs  mod.rs  repository.rs  selection_ui.rs  speech.rs  translation.rs  word_insight.rs
src-tauri/src/scheduler/: ebbinghaus.rs  mod.rs  notification.rs
src-tauri/src/selection/: debounce.rs  filter.rs  gesture.rs  listener.rs  mod.rs  mouse_event.rs  permission.rs  permission_prompt.rs  processor.rs  reader.rs  types.rs
src-tauri/src/selection/listener/: macos.rs  mod.rs  rdev.rs
src-tauri/src/selection/permission/: macos.rs  mod.rs  other.rs
src-tauri/src/selection/platform/: macos_events.rs  mod.rs
src-tauri/src/tts/: mac.rs  mod.rs  windows.rs
(+204 files in other folders)
