[package]
name = "Bugoo"
version = "1.0.0"
description = "A cross-platform desktop app for word selection translation with Ebbinghaus spaced repetition memory review"
authors = ["frankie"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.95.0"

[lib]
name = "bugoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
urlencoding = "2"
thiserror = "1"
